Added DELETE Method
- Added DELETE Method
- Updated Swagger
- Updated vendor
- Added small usage example to README
